--- a/index.html
+++ b/index.html
@@ -8,11 +8,18 @@
 <body>
     <h1>Ejercicio 1</h1>
     <h3>Ingresa 3 numeros</h3>
-    <input type="text" id="eje1-1" placeholder="1" value="1">
-    <input type="text" id="eje1-2" placeholder="2" value="2">
-    <input type="text" id="eje1-3" placeholder="3" value="3">
+    <input type="number" id="eje1-1" placeholder="1" value="1">
+    <input type="number" id="eje1-2" placeholder="2" value="2">
+    <input type="number" id="eje1-3" placeholder="3" value="3">
     <button type="button" id="eje1-btn">Comparar</button>
     <input type="" id="eje1-salida">
+
+    <h1>Ejercicio 2</h1>
+    <h3>Ingresa una temperatura en °C</h3>
+    <input type="number" id="eje2" placeholder="50" value="50">
+    <button type="button" id="eje2-btn">Convertir</button>
+    <input type="" id="eje2-salidaF">
+    <input type="" id="eje2-salidaK">
 
     <script src="Ejercicio1.js"></script>
 </body>
