--- a/index.html
+++ b/index.html
@@ -21,6 +21,12 @@
     <input type="" id="eje2-salidaF">
     <input type="" id="eje2-salidaK">
 
+    <h1>Ejercicio 3</h1>
+    <h3>Ingresa un numero entero positivo</h3>
+    <input type="number" id="eje3" placeholder="5" value="5">
+    <button type="button" id="eje3-btn">Factorial</button>
+    <input type="" id="eje3-salida">
+
     <script src="Ejercicio1.js"></script>
 </body>
 </html>
